Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "hat1_red = 4/10\n",
+    "hat2_red = 6/10\n",
+    "heads = 1/2\n",
+    "tails = 1/2\n",
+    "\n",
+    "red_ball = ((4/10)*(1/2)) + ((6/10)*(1/2))\n",
+    "red_ball"
    ]
   },
   {
@@ -49,11 +67,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "win_if_score_first_goal = 0.6\n",
+    "win_if_not_score_first_goal = 0.1\n",
+    "first_goal = 0.3\n",
+    "not_first_goal = 0.7\n",
+    "\n",
+    "win = (win_if_score_first_goal * 0.3) + (win_if_not_score_first_goal * 0.7)\n",
+    "win"
    ]
   },
   {
@@ -88,11 +124,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the next customer completely fills their tank and buys Super 95 is:  0.21 .\n",
+      "The probability that the next customer fills their tank is:  0.45499999999999996 .\n",
+      "The probability that the next customer fills their tank completely and bought Diesel is:  0.26373626373626374 .\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "G1 = 0.4\n",
+    "G2 = 0.35\n",
+    "G3 = 0.25\n",
+    "F1 = 0.3\n",
+    "F2 = 0.6\n",
+    "F3 = 0.5\n",
+    "\n",
+    "next1 = 0.4*0.3     # Diesel\n",
+    "next2 = 0.35*0.6   # Super 95\n",
+    "print(\"The probability that the next customer completely fills their tank and buys Super 95 is: \", next2, \".\")\n",
+    "next3 = 0.25*0.5   # Super 98\n",
+    "next_full = next1 + next2 + next3 # Total\n",
+    "print(\"The probability that the next customer fills their tank is: \", next_full, \".\")\n",
+    "diesel = next1/next_full     # Diesel/Total\n",
+    "print(\"The probability that the next customer fills their tank completely and bought Diesel is: \", diesel, \".\")"
    ]
   },
   {
@@ -122,11 +183,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that all the flights are overbooked is:  0.034999999999999996 .\n",
+      "The probability that at least one flight is not overbooked is:  0.965 .\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "Amsterdam_overbooked = 0.4\n",
+    "Brussels_overbooked = 0.25\n",
+    "Copenhagen_overbooked = 0.35\n",
+    "\n",
+    "All_overbooked = Amsterdam_overbooked * Brussels_overbooked * Copenhagen_overbooked\n",
+    "print(\"The probability that all the flights are overbooked is: \", All_overbooked, \".\")\n",
+    "\n",
+    "At_least_one_not_overbooked = 1-All_overbooked\n",
+    "print(\"The probability that at least one flight is not overbooked is: \", At_least_one_not_overbooked, \".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that just one flight is overbooked is:  0.45000000000000007 .\n"
+     ]
+    }
+   ],
+   "source": [
+    "Amsterdam_just_one_overbooked = 0.4 * 0.75 * 0.65\n",
+    "Brussels_just_one_overbooked = 0.25 * 0.6 * 0.65\n",
+    "Copenhagen_just_one_overbooked = 0.35 * 0.6 * 0.75\n",
+    "\n",
+    "Just_one_overbooked = Amsterdam_just_one_overbooked + Brussels_just_one_overbooked + Copenhagen_just_one_overbooked\n",
+    "print(\"The probability that just one flight is overbooked is: \", Just_one_overbooked, \".\")"
    ]
   },
   {
@@ -147,11 +248,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the chosen marble is red is:  0.6 .\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "bag1_red = 75/100\n",
+    "bag2_red = 60/100\n",
+    "bag3_red = 45/100\n",
+    "\n",
+    "bag = 1/3\n",
+    "\n",
+    "bag_red = (bag1_red*bag)+(bag2_red*bag)+(bag3_red*bag)\n",
+    "\n",
+    "print(\"The probability that the chosen marble is red is: \", bag_red, \".\")"
    ]
   },
   {
@@ -180,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
